# deals_pipeline_project

./: README.md
deal-pipeline-ui/: index.html  package-lock.json  package.json
deal-pipeline-ui/src/: App.tsx
deal-pipeline-ui/src/api/: auth.api.ts  axios.ts  deals.api.ts  memo.api.ts  users.api.ts
deal-pipeline-ui/src/auth/: AuthContext.tsx  ProtectedRoute.tsx
deal-pipeline-ui/src/components/: Navigation.tsx
deal-pipeline-ui/src/components/ICMemo/: ICMemoEditor.tsx
deal-pipeline-ui/src/components/Kanban/: Board.tsx  KanbanCard.tsx  KanbanColumn.tsx
deal-pipeline-ui/src/components/Memo/: MemoEditor.tsx
deal-pipeline-ui/src/components/Users/: UserRow.tsx
deal-pipeline-ui/src/pages/: DealDetails.tsx  Deals.tsx  Kanban.tsx  Login.tsx  Unauthorized.tsx  UserManagement.tsx
deal-pipeline-ui/src/styles/: DealDetails.css  ICMemo.css  Navigation.css  UserManagement.css  UserRow.css
deal-pipeline-ui/src/types/: deal.ts  index.ts
deals_processor/: .editorconfig  .env.example  .gitignore  .python-version  CONTRIBUTING.md  Makefile  README.md  SETUP_COMPLETE.md  constraints.txt  deals_processor.db  pyproject.toml
deals_processor/scripts/: create_admin.py  create_test_user.py  init_data.py  init_db.py  test_run_methods.sh  verify_auth_system.py
deals_processor/src/deals_processor/: __init__.py  main.py
deals_processor/src/deals_processor/api/: __init__.py  auth.py  deals.py  health.py  ic_memo.py  users.py
deals_processor/src/deals_processor/core/: __init__.py  auth.py  config.py  container.py  database.py  exceptions.py  security.py
deals_processor/src/deals_processor/models/: __init__.py  deal.py  ic_memo.py  user.py
deals_processor/src/deals_processor/repositories/: deal_repository.py  user_repository.py
deals_processor/src/deals_processor/schemas/: __init__.py  user.py
deals_processor/src/deals_processor/services/: __init__.py  auth_service.py  deal_service.py
deals_processor/tests/: __init__.py  conftest.py
deals_processor/tests/integration/: test_auth_integration.py
deals_processor/tests/unit/: __init__.py  test_deals_api.py  test_health.py  test_services.py
